; ModuleID = '/home/carl/AnghaBench/sway/sway/input/extr_switch.c_sway_switch_destroy.c'
source_filename = "/home/carl/AnghaBench/sway/sway/input/extr_switch.c_sway_switch_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sway_switch = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sway_switch_destroy(%struct.sway_switch* %0) #0 {
  %2 = alloca %struct.sway_switch*, align 8
  store %struct.sway_switch* %0, %struct.sway_switch** %2, align 8
  %3 = load %struct.sway_switch*, %struct.sway_switch** %2, align 8
  %4 = icmp ne %struct.sway_switch* %3, null
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %13

6:                                                ; preds = %1
  %7 = load %struct.sway_switch*, %struct.sway_switch** %2, align 8
  %8 = getelementptr inbounds %struct.sway_switch, %struct.sway_switch* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = call i32 @wl_list_remove(i32* %9)
  %11 = load %struct.sway_switch*, %struct.sway_switch** %2, align 8
  %12 = call i32 @free(%struct.sway_switch* %11)
  br label %13

13:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @wl_list_remove(i32*) #1

declare dso_local i32 @free(%struct.sway_switch*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
